--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
 	z-index: 1; /* Stay on top */
 	top: 0; /* Stay at the top */
 	left: 0;
-	overflow-x: hidden; /* Disable horizontal scroll */
-	overflow: hidden; /* Disable vertical scroll */
+	overflow: hidden; /* Disable scroll */
 	padding-top: 20px;
 }
 .sidenavR {
@@ -14,8 +13,7 @@
 	z-index: 1; /* Stay on top */
 	top: 0; /* Stay at the top */
 	right: 0;
-	overflow-x: hidden; /* Disable horizontal scroll */
-	overflow: hidden; /* Disable vertical scroll */
+	overflow: hidden; /* Disable scroll */
 	padding-top: 10px;
 }
 .aligncenter {
